--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.9.2",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "prop-types": "^15.8.1",
